--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -36,15 +36,56 @@ about-section{
     background-color: rgb(255, 217, 217); 
     width: 80%;
     margin: 0 auto;
-    padding: 40px;
+    padding: 25px;
     border-radius: 15px;
+    margin-bottom: 30px;
 }
 
 #titulo-sobre-mim {
     font-size: 23px;
-    border-bottom: 2px solid rgb(255, 121, 143);  
+    border-bottom: 2px solid rgb(255, 121, 143);
+    padding-bottom: 7px;  
 }
 
 .texto-sobre-mim {
     font-size: 18px;
+    padding-top: 10px;
+}
+
+hobbies {
+    display: block;
+    background-color: rgb(255, 217, 217); 
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 15px;
+    margin-bottom: 30px;
+}
+
+ul {
+    list-style: none;
+    padding: 15px;
+    display: flex;
+    gap: 20px;
+}
+
+li{
+    background-color:  rgb(253, 246, 246);
+    padding: 12px;
+    border-left: 4px solid rgb(255, 121, 143);
+    font-size: 16px;
+    min-width: 270px;
+
+}
+
+li:hover {
+    background-color: rgb(250, 238, 238);
+    transform: translateX(5px);
+    transition: all 0.3s ease;
+}
+
+#titulo-hobbies {
+    font-size: 20px;
+    border-bottom: 2px solid rgb(255, 121, 143);
+    padding-bottom: 7px;  
 }
