--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -15,8 +15,6 @@ body {
     font-family: "Outfit", sans-serif;
 }
 
-
-
 header {
     background-color: rgb(255, 120, 143);
     color: rgb(240, 248, 255);
@@ -69,7 +67,7 @@ ul {
     gap: 20px;
 }
 
-li{
+li {
     background-color:  rgb(253, 246, 246);
     padding: 12px;
     border-left: 4px solid rgb(255, 121, 143);
@@ -88,4 +86,43 @@ li:hover {
     font-size: 20px;
     border-bottom: 2px solid rgb(255, 121, 143);
     padding-bottom: 7px;  
+}
+
+contact {
+    display: block;
+    background-color: rgb(255, 217, 217); 
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 15px;
+    margin-bottom: 30px;
+}
+
+contact h3 {
+    margin-bottom: 8px;
+    font-size: 20px;
+    text-align: center;
+}
+
+contact p {
+    text-align: center;
+    font-size: 18px;
+}
+
+contact a {
+    color: rgb(255, 121, 143);
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+    margin: 0 0.5rem;
+    border: 2px solid  rgb(255, 121, 143);
+    border-radius: 20px;
+    display: inline-block;
+    transition: all 0.2s ease;
+}
+
+a:hover {
+    background-color: rgb(255, 121, 143);
+    transform: translateX(-2px);
+    color:  rgb(253, 226, 230);
 }
