--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -2,8 +2,8 @@
 
 /*Reset do CSS */
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0rem;
+    padding: 0rem;
     box-sizing: border-box;
 }
 
@@ -18,14 +18,14 @@ body {
 header {
     background-color: rgb(255, 120, 143);
     color: rgb(240, 248, 255);
-    padding: 30px;
+    padding: 1.8rem;
     text-align: center;
 }
 
 main {
     background-color: rgb(253, 246, 246);
     flex: 1;
-    padding: 48px 38px;
+    padding: 3rem 2.3rem;
     width: 100%;
 }
 
@@ -34,20 +34,20 @@ about-section{
     background-color: rgb(255, 217, 217); 
     width: 80%;
     margin: 0 auto;
-    padding: 25px;
-    border-radius: 15px;
-    margin-bottom: 30px;
+    padding: 1.5rem;
+    border-radius: 0.9rem;
+    margin-bottom: 1.8rem;
 }
 
 #titulo-sobre-mim {
-    font-size: 23px;
-    border-bottom: 2px solid rgb(255, 121, 143);
-    padding-bottom: 7px;  
+    font-size: 1.4rem;
+    border-bottom: 0.13rem solid rgb(255, 121, 143);
+    padding-bottom: 0.43rem;  
 }
 
 .texto-sobre-mim {
-    font-size: 18px;
-    padding-top: 10px;
+    font-size: 1.1rem;
+    padding-top: 0.6rem;
 }
 
 hobbies {
@@ -55,37 +55,37 @@ hobbies {
     background-color: rgb(255, 217, 217); 
     width: 80%;
     margin: 0 auto;
-    padding: 20px;
-    border-radius: 15px;
-    margin-bottom: 30px;
+    padding: 1.2rem;
+    border-radius: 0.9rem;
+    margin-bottom: 1.8rem;
 }
 
 ul {
     list-style: none;
-    padding: 15px;
+    padding: 0.9rem;
     display: flex;
-    gap: 20px;
+    gap: 1.2rem;
 }
 
 li {
     background-color:  rgb(253, 246, 246);
-    padding: 12px;
-    border-left: 4px solid rgb(255, 121, 143);
-    font-size: 16px;
-    min-width: 270px;
+    padding: 0.75rem;
+    border-left: 0.25rem solid rgb(255, 121, 143);
+    font-size: 1rem;
+    min-width: 16.8rem;
 
 }
 
 li:hover {
     background-color: rgb(250, 238, 238);
-    transform: translateX(5px);
+    transform: translateX(0.31rem);
     transition: all 0.3s ease;
 }
 
 #titulo-hobbies {
-    font-size: 20px;
-    border-bottom: 2px solid rgb(255, 121, 143);
-    padding-bottom: 7px;  
+    font-size: 1.2rem;
+    border-bottom: 0.13rem solid rgb(255, 121, 143);
+    padding-bottom: 0.43rem;  
 }
 
 contact {
@@ -93,20 +93,20 @@ contact {
     background-color: rgb(255, 217, 217); 
     width: 80%;
     margin: 0 auto;
-    padding: 20px;
-    border-radius: 15px;
-    margin-bottom: 30px;
+    padding: 1.2rem;
+    border-radius: 0.9rem;
+    margin-bottom: 1.8rem;
 }
 
 contact h3 {
-    margin-bottom: 8px;
-    font-size: 20px;
+    margin-bottom: 0.5rem;
+    font-size: 1.2rem;
     text-align: center;
 }
 
 contact p {
     text-align: center;
-    font-size: 18px;
+    font-size: 1.12rem;
 }
 
 contact a {
@@ -125,4 +125,16 @@ a:hover {
     background-color: rgb(255, 121, 143);
     transform: translateX(-2px);
     color:  rgb(253, 226, 230);
+}
+
+footer {
+    background-color:  rgb(255, 120, 143);
+    color:  rgb(253, 226, 230);
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+}
+
+footer p {
+    font-size: 1rem;
 }
